@@ -1,5 +1,7 @@
 2006-02-09  Adam Piatyszek  <ediap@users.sourceforge.net>
 
+	* config/acx_cblas.m4: Added support for detecting libgslcblas
+
 	* config/acx_fft.m4: Minor fixes to the FFT detection routines.
 	Now, MKL and ACML FFT routines are searched in the default BLAS
 	library first; even if BLAS was defined explicitly using
